<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#083c5d"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:hint="@string/username"
        android:textSize="24sp"
        android:layout_above="@+id/logPassword"
        android:padding="5dp"
        android:background="#ffbb39"
        android:layout_marginBottom="16dp"/>

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logPassword"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="24sp"
        android:padding="5dp"
        android:layout_above="@+id/loginButton"
        android:background="#ffbb39"
        android:layout_marginBottom="16dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_centerVertical="true"
        android:backgroundTint="#1d2731"
        android:text="@string/login"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSignUp"
        android:layout_below="@+id/loginButton"
        android:text="@string/new_user_register_here"
        android:textColor="#ffbb39"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />
</RelativeLayout>